chore(ci): deploy ci with k8s